--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 [dependencies]
 image = "0.25.5"
+ravif = "0.11.11"
 rayon = "1.10.0"
 webp-animation = "0.9.0"
+
+[profile.release]
+opt-level = 3        # Уменьшение уровня оптимизации (по умолчанию: 3)
